upgrade material components

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,8 @@
 <body>
   <div id="demo"></div>
 
+  <button>Button</button>
+
   <script type="module">
     import {  render } from '@jsview/core';
     import { Button } from '../dist/button/index.js';
